--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "npm": "^6.10.2",
     "rxjs": "~6.5.1",
